# eliza

./: ELIZA_PROJECT_TASKS.md  pnpm-lock.yaml
agent/: .dockerignore  Dockerfile  app.py  fly.toml  package.json  pyproject.toml  tsup.config.ts
agent/app/: __init__.py  main.py
